--- a/hello-jni/app/build.gradle
+++ b/hello-jni/app/build.gradle
@@ -4,7 +4,8 @@ apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 29
-    ndkVersion '21.2.6472646'
+//    ndkVersion '21.2.6472646'
+    ndkVersion '21.0.6113669'
 
     defaultConfig {
         applicationId 'com.example.hellojni'
