--- a/hello-jniCallback/app/src/main/cpp/CMakeLists.txt
+++ b/hello-jniCallback/app/src/main/cpp/CMakeLists.txt
@@ -1,7 +1,11 @@
 cmake_minimum_required(VERSION 3.4.1)
 
-add_library(hello-jnicallback SHARED
-            hello-jnicallback.c)
+add_library(
+        hello-jnicallback
+        SHARED
+
+        hello-jnicallback.cpp
+)
 
 # Include libraries needed for hello-jnicallback lib
 target_link_libraries(hello-jnicallback
